fix: promoSlider height on safari browser

--- a/src/components/UI/BurgerMenu/BurgerMenu.module.scss
+++ b/src/components/UI/BurgerMenu/BurgerMenu.module.scss
@@ -179,9 +179,5 @@
 @media (max-width: $mobileM) {
   .list {
     width: 100%;
-
-    &::before {
-      width: 100%;
-    }
   }
 }
